fix image stretch

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ nav.newNav .toggle-nav {
 .image {
     position: relative;
     width: 400px;
-    height: 400px;
+    height: auto;
     margin: 14px;
     box-shadow: 3px 3px 6px #777
 }
